--- a/templates/account/dashboard/dashboard.html
+++ b/templates/account/dashboard/dashboard.html
@@ -15,9 +15,10 @@
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
   <div class="col">
     <a href="#" class="text-reset text-decoration-none" role="button" style="max-width: 540px;">
-      <div class="card mb-3">
+      <div class="card mb-3" style="
+      border:0;">
         <div class="row g-0">
-          <div class="col-2 position-relative">
+          <div class="col-2 position-relative" style="left:5px;">
             <svg class="position-absolute top-50 start-50 translate-middle" xmlns="http://www.w3.org/2000/svg"
               width="30" height="30" fill="currentColor" class="bi bi-gift" viewBox="0 0 16 16">
               <path
@@ -25,7 +26,9 @@
             </svg>
           </div>
           <div class="col-10">
-            <div class="card-body ps-0 ps-md-1">
+            <div class="card-body ps-0 ps-md-1" style="
+            margin-left: 15px;
+            border:0;">
               <h1 class="h5">Orders</h1>
               <p class="card-text small text-muted">View, Track, Change or buy again</p>
             </div>
@@ -37,9 +40,10 @@
   <div class="col">
     <a href="{% url "account:edit_details" %}" class="text-reset text-decoration-none" role="button"
       style="max-width: 540px;">
-      <div class="card mb-3">
+      <div class="card mb-3"style="
+      border:0;">
         <div class="row g-0">
-          <div class="col-2 position-relative">
+          <div class="col-2 position-relative" style="left:5px;">
             <svg class="position-absolute top-50 start-50 translate-middle" xmlns="http://www.w3.org/2000/svg"
               width="30" height="30" fill="currentColor" class="bi bi-shield-lock" viewBox="0 0 16 16">
               <path
@@ -49,7 +53,8 @@
             </svg>
           </div>
           <div class="col-10">
-            <div class="card-body ps-0 ps-md-1">
+            <div class="card-body ps-0 ps-md-1" style="
+            margin-left: 15px;">
               <h1 class="h5">Login & Security</h1>
               <p class="card-text small text-muted">Edit login, email and phone number</p>
             </div>
@@ -61,9 +66,10 @@
   <div class="col">
     <a href="{% url "account:addresses" %}" class="text-reset text-decoration-none" role="button"
       style="max-width: 540px;">
-      <div class="card mb-3">
+      <div class="card mb-3" style="
+      border:0;">
         <div class="row g-0">
-          <div class="col-2 position-relative">
+          <div class="col-2 position-relative" style="left:5px;">
             <svg class="position-absolute top-50 start-50 translate-middle" xmlns="http://www.w3.org/2000/svg"
               width="30" height="30" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
               <path
@@ -71,7 +77,8 @@
             </svg>
           </div>
           <div class="col-10">
-            <div class="card-body ps-0 ps-md-1">
+            <div class="card-body ps-0 ps-md-1" style="
+            margin-left: 15px;">
               <h1 class="h5">Your Addresses</h1>
               <p class="card-text small text-muted">Edit your shipping addresses</p>
             </div>
@@ -83,9 +90,10 @@
   <div class="col">
     <a href="{% url "account:wishlist" %}" class="text-reset text-decoration-none" role="button"
       style="max-width: 540px;">
-      <div class="card mb-3">
+      <div class="card mb-3" style="
+      border:0;">
         <div class="row g-0">
-          <div class="col-2 position-relative">
+          <div class="col-2 position-relative" style="left:5px;">
             <svg class="position-absolute top-50 start-50 translate-middle" xmlns="http://www.w3.org/2000/svg"
               width="30" height="30" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
               <path
@@ -95,9 +103,10 @@
             </svg>
           </div>
           <div class="col-10">
-            <div class="card-body ps-0 ps-md-1">
+            <div class="card-body ps-0 ps-md-1" style="
+            margin-left: 15px;">
               <h1 class="h5">Your Wish List</h1>
-              <p class="card-text small text-muted">View your Wish List</p>
+              <p class="card-text small text-muted">View and manage your Wish List </p>
             </div>
           </div>
         </div>
