--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/linearicons@1.0.2/dist/web-font/style.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
   </script>
   <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
+  
+  <link href="https://fonts.googleapis.com/css?family=Cabin:400,700" rel="stylesheet">
   <link rel="stylesheet" href="{% block stylesheet %}{% endblock %}">
 </head>
 
@@ -21,19 +26,15 @@
   <header class="pb-3">
     <nav class="navbar navbar-expand-md navbar-light bg-white border-bottom">
       <div class="container-fluid px-md-4">
-        <div class="d-flex w-100 navbar-collapse">
-          <a class="navbar-brand d-flex-inline" href="/">
-            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-asterisk"
-              viewBox="0 0 16 16">
-              <path
-                d="M8 0a1 1 0 0 1 1 1v5.268l4.562-2.634a1 1 0 1 1 1 1.732L10 8l4.562 2.634a1 1 0 1 1-1 1.732L9 9.732V15a1 1 0 1 1-2 0V9.732l-4.562 2.634a1 1 0 1 1-1-1.732L6 8 1.438 5.366a1 1 0 0 1 1-1.732L7 6.268V1a1 1 0 0 1 1-1z" />
-            </svg>
+        <div class="d-flex w-100 navbar-collapse" >
+          <img src="/media/images/logo.jpeg" style="height:60px; width: 60px;"alt="logo">
+          <a class="navbar-brand d-flex-inline" href="#">
           </a>
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle d-none d-md-block fw500" href="#" id="navbarDropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                All
+                Shop 
                 <i class="ps-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-chevron-down" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
@@ -75,14 +76,14 @@
                       Login
                       {% endif %}
                     </div>
-                    <span class="fs15 fw500">Account &amp; Lists
+                    <span class="fs15 fw500">Account Settings
                     </span>
                     </span>
                   </a>
                   <div class="dropdown-menu rounded-0" aria-labelledby="navbarDropdown">
                     <div class="card border-0">
                       <div class="card-body">
-                        <h6 class="card-title">My Account</h6>
+                        
                         <ul class="list-group list-group-flush dropdown-account-link">
                           {% if user.is_authenticated %}
                           <a href="{% url "account:dashboard" %}" class="text-reset small list-group-item p-0 pb-1 border-0 dropdown-account-link">Your Account</a>
@@ -149,62 +150,62 @@
       </div>
     </nav>
   </header>
-
-  <main class="pt-5">
+  
+     
+   <main class="pt-5">
     <div id="content">{% block content %} {% endblock %}</div>
-  </main>
+   </main>
 
-  <footer class="container py-5 footer">
+
+   
+
+
+    <footer class="container py-5 footer">
     <hr>
     <div class="row pt-4">
-      <div class="col-12 col-md">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-asterisk"
-          viewBox="0 0 16 16">
-          <path
-            d="M8 0a1 1 0 0 1 1 1v5.268l4.562-2.634a1 1 0 1 1 1 1.732L10 8l4.562 2.634a1 1 0 1 1-1 1.732L9 9.732V15a1 1 0 1 1-2 0V9.732l-4.562 2.634a1 1 0 1 1-1-1.732L6 8 1.438 5.366a1 1 0 0 1 1-1.732L7 6.268V1a1 1 0 0 1 1-1z" />
-        </svg>
-        <small class="d-block mb-3 text-muted"></small>
+        
+        <div class="col-6 col-md fs15">
+            <h5>Features</h5>
+            <ul class="list-unstyled">
+                <li><a class="link-secondary text-decoration-none" href="#">Free Delivery</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Hosting</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Development</a></li>
+            </ul>
+        </div>
+        <div class="col-6 col-md fs15">
+            <h5>About</h5>
+            <ul class="list-unstyled">
+                <li><a class="link-secondary text-decoration-none" href="#">Company</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Team</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Vision</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">IIITL</a></li>
+            </ul>
+        </div>
+        <div class="col-6 col-md fs15">
+            <h5>Careers</h5>
+            <ul class="list-unstyled">
+                <li><a class="link-secondary text-decoration-none" href="#">Job opening</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Education</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Employees</a></li>
+                <li><a class="link-secondary text-decoration-none" href="#">Benefits</a></li>
+            </ul>
+        </div>
+        <div class="col-lg-3 item social">
+          <a href="#"><i class="icon ion-social-facebook"></i></a>
+          <a href="#"><i class="icon ion-social-twitter"></i></a>
+          <a href="#"><i class="icon ion-social-snapchat"></i></a>
+          <a href="#"><i class="icon ion-social-instagram"></i></a>
+          
       </div>
-      <div class="col-6 col-md fs15">
-        <h5>Features</h5>
-        <ul class="list-unstyled">
-          <li><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md fs15">
-        <h5>Resources</h5>
-        <ul class="list-unstyled">
-          <li><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md fs15">
-        <h5>Resources</h5>
-        <ul class="list-unstyled">
-          <li><a class="link-secondary text-decoration-none" href="#">Business</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Education</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Government</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Gaming</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>About</h5>
-        <ul class="list-unstyled">
-          <li><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-          <li><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
-        </ul>
-      </div>
+      <p class="copyright">IIITL Book Aid © 2021</p>
     </div>
-  </footer>
+</footer>
+  
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
