--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 <div class="container">
-  <div class="alert alert-primary fw600 rounded-0 border-0 pb-3" role="alert">
+  <div class="alert alert-primary fw600 rounded-0 border-0 pb-3" role="alert" style="
+  margin-bottom: 30px;">
     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-info-circle me-2"
       viewBox="0 0 16 16">
       <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
@@ -13,11 +14,77 @@
     COVID-19 - <u>Click here for our latest updates</u> on our stores, website and contact centre. Thank you for
     your patience and support.
   </div>
-  <div class="container">
+  
+  <div class="background-image" >
+    <img src="/media/images/Add_heading_10.jpg" alt="bgpic" class="responsive" height="50%" width="160%" style="
+    margin-bottom: 25px; ">
+  </div>
+  
+  <div class="page-section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 py-3">
+          
+          <h1 class="title-section"><span class="fg-primary">About Us</span></h1>
+
+          <p>IIITL Book Aid is a book donation and library development charity. Every year we give millions of people the opportunity to read by providing brand new books to thousands of libraries, schools, universities, refugee camps, hospitals and prisons worldwide.</p>
+
+          <a href="about.html" class="btn btn-primary mt-4">Read More</a>
+        </div>
+        <div class="col-lg-6 py-3">
+          <div class="about-img">
+            <img src="/media/images/image-12.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="page-section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 py-3">
+          
+          <h1 class="title-section"><span class="fg-primary">Our Goal</span></h1>
+
+          <p>Our mission is to provide books, resources and training to support an environment in which reading for pleasure, study and lifelong learning can flourish. </p>
+
+          <a href="#" class="btn btn-primary mt-4">Read More</a>
+        </div>
+        <div class="col-lg-6 py-3">
+          <div class="about-img">
+            <img src="/media/images/India-literacy-1.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="page-section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 py-3">
+          
+          <h1 class="title-section"><span class="fg-primary">Our Vision</span></h1>
+
+          <p>Our vision is a world where everyone has access to books that will enrich, improve and change their lives. </p>
+
+          <a href="#" class="btn btn-primary mt-4">Read More</a>
+        </div>
+        <div class="col-lg-6 py-3">
+          <div class="about-img">
+            <img src="/media/images/read.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+<div class="container">
     <div class="row">
       <div class="album py-5">
         <div class="pb-3">
-          <h1 class="h3">Popular</h1>
+          <h1 class="h3">Popular Products</h1>
         </div>
         {% if not products %}
         <div class="col-12">There are currently no products active</div>
@@ -25,15 +92,15 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
           {% for product in products %}
           <div class="col">
-            <div class="card border-0">
+            <div class="cards border-0">
               {% for image in product.product_image.all %}
               {% if image.is_feature%}
               <img class="img-fluid" alt="Responsive image" src="{{ image.image.url }}"
                 alt="{{ image.image.alt_text }}">
               {% endif %}
               {% endfor %}
-              <div class="card-body px-0">
-                <p class="card-text">
+              <div class="cards-body px-0">
+                <p class="cards-text">
                   <a class="text-dark text-decoration-none"
                     href="{{ product.get_absolute_url }}">{{ product.title|slice:":50" }}...</a>
                 </p>
@@ -45,6 +112,41 @@
         </div>
         {% endif %}
       </div>
+      <div class="page-section">
+        <div class="container">
+          <div class="text-center">
+            <h2 class="title-section mb-3">Stay in touch</h2>
+            <p>Just say hello or drop us a line. You can manualy send us email on <a href="mailto:example@mail.com">example@mail.com</a></p>
+          </div>
+          <div class="row justify-content-center mt-5">
+            <div class="col-lg-8">
+              <form action="#" class="form-contact">
+                <div class="row">
+                  <div class="col-sm-6 py-2">
+                    <label for="name" class="fg-grey">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="Enter name..">
+                  </div>
+                  <div class="col-sm-6 py-2">
+                    <label for="email" class="fg-grey">Email</label>
+                    <input type="text" class="form-control" id="email" placeholder="Email address..">
+                  </div>
+                  <div class="col-12 py-2">
+                    <label for="subject" class="fg-grey">Subject</label>
+                    <input type="text" class="form-control" id="subject" placeholder="Subject..">
+                  </div>
+                  <div class="col-12 py-2">
+                    <label for="message" class="fg-grey">Message</label>
+                    <textarea id="message" rows="8" class="form-control" placeholder="Enter message.."></textarea>
+                  </div>
+                  <div class="col-12 mt-3">
+                    <button type="submit" class="btn btn-primary px-5">Submit</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div> <!-- .container -->
+      </div> <!-- .page-section -->
     </div>
   </div>
 
