new cover image

--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -16,7 +16,7 @@
   </div>
   
   <div class="background-image" >
-    <img src="/media/images/Add_heading_10.jpg" alt="bgpic" class="responsive" height="50%" width="160%" style="
+    <img src="/media/images/cover.png" alt="bgpic" class="responsive" height="50%" width="160%" style="
     margin-bottom: 25px; ">
   </div>
   
