Donation Page Added

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>{% block title %}Store - Low Prices in Books & more{% endblock %}</title>
+  <title>{% block title %}IIITL Book Aid - Donating Books & more{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -63,6 +63,21 @@
             </div>
             <span class="fs15 fw500">Shop</span>
           </button>
+          
+          <button
+            class="nav-custom" style="margin: 10px;
+            border-radius: 5%;
+            padding: 10px 15px;
+            border: 2px solid orange;
+            background: transparent;
+            cursor: pointer;
+            position: relative;
+            display: inline-block;";
+
+          ><a href="{% url "donate:donate_books" %}" style="text-decoration: none; color: black;" >Donate Books</a>
+          </button>
+          
+
           <div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent2">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -100,6 +115,8 @@
               </ul>
             </div>
           </div>
+          
+          
           <a type="button" role="button" href="{% url "basket:basket_summary" %}"
             class="btn btn-outline-secondary border-0 basket-btn">
             {% with total_qty=basket|length %}
