--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -102,7 +102,7 @@
               <div class="cards-body px-0">
                 <p class="cards-text">
                   <a class="text-dark text-decoration-none"
-                    href="{{ product.get_absolute_url }}">{{ product.title|slice:":50" }}...</a>
+                    href="{{ product.get_absolute_url }}">{{ product.title|slice:":50" }}</a>
                 </p>
                 <div class="fw-bold">£{{product.regular_price}}</div>
               </div>
